message JMTransfer {
    required string version = 1;//接口版本号
    required string deviceId = 2;//设备uuid
    required uint32 cmd = 3;//请求接口命令字
    required uint64 seq = 4;//请求序列号
    required uint32 format = 5;//请求1，应答2，通知3，响应4
    required uint32 flag = 6;//1 rsa加密 2aes加密
    required string platform = 7;//mobile-ios mobile-android pc-windows pc-mac
    required string platformVersion = 8;//客户端版本号
    required string token = 9;//客户端凭证
    required string appKey = 10;//客户端key
    required string timeStamp = 11;//时间戳
    required string sign = 12;//签名 md5(secret++(body base64)++(timeStamp)++secret)
    optional bytes body = 20;//请求数据
}